--- a/style.css
+++ b/style.css
@@ -67,6 +67,12 @@ body{
     justify-content: space-between;
     align-items:center;
 }
+.flex-25{
+    flex:0 1 25%;
+}
+.flex-40{
+    flex:0 1 40%;
+}
 .center{
     display: flex;
     justify-content: center;
@@ -116,6 +122,7 @@ body{
     display:inline-block;
     padding:10px 20px;
     border-radius:8px;
+    text-decoration: none;
 }
 
 
@@ -144,4 +151,89 @@ body{
 }
 .hero-header p{
     color:rgb(243, 73, 51) ;
+}
+
+/* section-1 */
+.section-1{
+    padding:80px;
+    background-color:rgb(246 249 254);
+}
+h2{
+    font-size:22px;
+    font-weight:900;
+    margin:10px 0;
+    color:rgb(46, 46, 78);
+}
+p{
+    color:rgb(82, 84, 85);
+    font-size:18px;
+}
+.col-3 h3{
+    font-size:30px;
+    font-weight:900;
+    margin:10px 0;
+    color:rgb(46, 46, 78);
+}
+.section-1 .col{
+    height:350px;
+    margin:1%;
+}
+.col-3{
+    border:4px solid rgb(243, 73, 51);
+    padding:0 20px;
+}
+.section-1 a {
+    display:inline-block;
+    text-decoration: none;
+    margin:10px 0;
+    color:rgb(36, 36, 61);
+}
+.section-1 .flex{
+    justify-content:center;
+    align-items:stretch;
+    margin:0
+}
+.col-3 hr{
+    width:100px;
+    margin-left:1px;
+    margin:20px 0;
+    justify-content:flex-start;
+    border:1px solid rgb(243, 73, 51);
+}
+
+/* SECtion - 2 */
+
+.section-2 {
+    padding:180px;
+}
+
+.section-2 h3{
+    font-size:30px;
+    font-weight:900;
+    margin:30px 0;
+    color:rgb(46, 46, 78);
+}
+.section-2 .btn{
+    margin:30px 0;
+}
+/* .section-2 .flex{
+    justify-content:flex-start;
+    margin:1.5%
+} */
+.section-2 .col-1{
+    position:absolute;
+    top:0px;
+    left:100px
+}
+.col-2{
+    width:40%;
+    height:100px;
+    background-color:rgba(255, 255, 255, 0.808);
+    padding:20px;
+}
+.section-2 .col-2{
+    position:absolute;
+    top:70px;
+    left:500px;
+    height:530px;
 }
