--- a/style.css
+++ b/style.css
@@ -216,14 +216,10 @@ p{
 .section-2 .btn{
     margin:30px 0;
 }
-/* .section-2 .flex{
-    justify-content:flex-start;
-    margin:1.5%
-} */
 .section-2 .col-1{
     position:absolute;
     top:0px;
-    left:100px
+    left:100px;
 }
 .col-2{
     width:40%;
