--- a/style.css
+++ b/style.css
@@ -87,11 +87,20 @@ body{
     flex:0 1 30%;
     margin-right:2%;
 }
+.flex-34{
+    flex:0 1 34%;
+    margin:1%;
+}
 .flex-40{
     flex:0 1 40%;
 }
 .flex-50{
     flex:0 1 45%;
+    margin:1%;
+}
+.flex-60{
+    flex:0 1 60%;
+    margin:1%;
 }
 .center{
     display: flex;
@@ -598,4 +607,268 @@ p{
 .case-img{
     flex:0 1 25%;
     margin:1%;
+}
+
+/* Blog Page */
+
+.article-section{
+    background-color:#fff;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px  5px rgb(248, 248, 248);
+    margin-bottom: 40px;
+}
+.cases-hero{
+    background:url(media/blog_hero.jpg) no-repeat ;
+    padding:80px 0;
+    background-size: cover;
+}
+.article-b {
+    padding:100px 0;
+}
+.article-b .flex{
+    justify-content: center;
+    align-items: stretch;
+}
+.blog-heading{
+    position:relative;
+    margin-bottom: 30px;
+}
+.date{
+    background-color:rgb(253 101 107) ;
+    display:inline-block;
+    text-align:center;
+    padding:4px 10px;
+    font-size:24px;
+    font-weight:900;
+    color:white;
+    width:80px;
+    position:absolute;
+    top:195px;
+    left:20px;
+    border-radius:5px;
+}
+.blog-article{
+    margin:0 20px;
+}
+.blog-article p{
+    color:#012d5b;   
+}
+.blog-article h2{
+    font-size:26px;   
+}
+.blog-lifestyle{
+    margin:20px 0;
+    color:rgb(82, 84, 85);
+    font-size:14px;
+}
+.blog-lifestyle i {
+    margin-right:10px;
+}
+
+.next-page{
+    text-align: center;
+    margin-top:100px;
+}
+.next-page i,.next-page span{
+    padding:10px 14px;
+    border:1px solid rgb(223, 226, 228);
+    margin-left: 10px;
+    font-size: 10px;
+}
+
+.search-section{
+    background-color:rgb(248, 248, 248);
+    padding:30px;
+    margin-bottom: 20px;
+}
+.search-section input{
+    padding:14px 20px;
+    width:82%;
+    border:2px solid rgb(238, 238, 238);
+    margin-bottom:10px;
+}
+.search-section i {
+    background-color:rgb(253 101 107) ;
+    padding:13px;
+}
+.search-btn a {
+    background-color:white;
+    border:1px solid rgb(253 101 107);
+    color:rgb(253 101 107);
+    padding:10px 110px;
+    width: 100%;
+    display:inline-block;
+    text-decoration: none;
+
+}
+
+.category-section{
+    background-color:rgb(248, 248, 248);
+    padding:30px;
+    margin-bottom: 20px;
+}
+.category-section  h2,.post-section h2 {
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgb(228, 221, 221) ;
+    padding-bottom: 30px;
+}
+.category-section .category-p {
+    border-bottom: 1px solid rgb(228, 221, 221) ;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+.post-section{
+    background-color:rgb(248, 248, 248);
+    padding:30px;
+    margin-bottom: 20px;
+}
+.post-cont{
+    margin-top:20px;
+}
+.post-section h3{
+    font-size:18px;
+}
+
+.tag-section{
+    background-color:rgb(248, 248, 248);
+    padding:30px;
+    margin-bottom: 20px;
+}
+.tag-section  h2 {
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgb(228, 221, 221) ;
+    padding-bottom: 30px;
+}
+.tag-section p {
+    display:inline-block;
+    padding:1px 10px;
+    background-color:white;
+    margin:8px 2px;
+    border-radius: 2px;
+    border:1px solid rgb(228, 221, 221);
+}
+
+
+.feeds-section{
+    background-color:rgb(248, 248, 248);
+    padding:30px;
+    margin-bottom: 20px;
+}
+.feeds-section  h2 {
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgb(228, 221, 221) ;
+    padding-bottom: 30px;
+}
+.feeds-section .img-container{
+    margin:30px 0;
+}
+.feeds-section img{
+    margin:4px 0;
+    margin-right: 15px;
+}
+
+.newsletter-section{
+    background-color:rgb(248, 248, 248);
+    padding:30px;
+    margin-bottom: 20px;
+}
+.newsletter-section  h2 {
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgb(228, 221, 221) ;
+    padding-bottom: 30px;
+}
+.newsletter-section input{
+    padding:14px;
+    width:100%;
+    border:2px solid rgb(238, 238, 238);
+    margin:10px 0;
+}
+.newsletter-section a {
+    background-color:white;
+    border:1px solid rgb(253 101 107);
+    color:rgb(253 101 107);
+    padding:10px 110px;
+    width: 100%;
+    display:inline-block;
+    text-decoration: none;
+    margin:10px 0;
+}
+
+
+
+/* Contact page */
+
+.contact-hero{
+    background:url(media/cases_hero.jpg) no-repeat ;
+    padding:80px 0;
+    background-size: contain;
+}
+.contact-hero h1{
+    font-size:40px;
+    color:white;
+    text-align:center;
+    font-weight:900;
+}
+.map{
+    margin:100px 0;
+    padding:0 130px;
+}
+.form{
+    padding-bottom:90px;
+}
+.form .flex{
+    justify-content: center;
+    align-items: stretch;
+}
+.textarea{
+    width:100%;
+    margin:14px 0;
+    border:1px solid rgb(238, 238, 238);
+    padding:12px ;
+}
+.form input{
+    width:100%;
+    margin:14px 0;
+    padding:14px 16px;
+    border:1px solid rgb(238, 238, 238)
+}
+.form h2 {
+    font-size:30px;
+    margin-left: 195px;
+}
+.form .name .input-2{
+    margin-left: 10px;
+} 
+.input-flex{
+    display:flex;
+    justify-content: center;
+}
+.form a {
+    background-color:white;
+    border:2px solid rgb(253 101 107);
+    color:rgb(253 101 107);
+    padding:10px 60px;
+    display:inline-block;
+    text-decoration: none;
+    margin:20px 0;
+    border-radius: 4px;
+}
+.address-container i {
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+.address-container .flex{
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.address-container p {
+    font-size:14px;
+}
+.address-1{
+    margin-bottom:32px;
+}
+.form .flex-20{
+    margin:2%
 }
